fixing: (permanent) fixing telegram contact button text wrapping

--- a/public/index.css
+++ b/public/index.css
@@ -150,7 +150,9 @@ footer {
   height: 24px;
   background: #0a66c2;
   font-weight: bold;
+  text-wrap: nowrap;
   text-decoration: none;
+  white-space: 0;
   padding: 8px 16px;
   background: #0a66c2;
   font-weight: bold;
